@@ -10,7 +10,6 @@ import java.io.Serial;
 import java.io.Serializable;
 import java.security.Principal;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Objects;
 import java.util.Set;
 
@@ -38,7 +37,7 @@ public class Identity implements IdentityManager, Serializable {
 
             @Override
             public Set<String> getRoles() {
-                return Collections.emptySet();
+                return Set.of();
             }
         };
     }
